MODLD-395: distinguish request & response DTOs