@@ -4,17 +4,20 @@ import static java.util.Objects.isNull;
 import static org.apache.commons.collections4.CollectionUtils.isNotEmpty;
 
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
 import java.util.Set;
 import org.folio.linked.data.domain.dto.PrimaryTitleField;
-import org.folio.linked.data.domain.dto.ResourceDto;
+import org.folio.linked.data.domain.dto.ResourceRequestDto;
+import org.folio.linked.data.domain.dto.ResourceResponseDto;
 import org.folio.linked.data.domain.dto.TitleField;
 import org.folio.linked.data.mapper.dto.common.SingleResourceMapperUnit;
 
 public abstract class TopResourceMapperUnit implements SingleResourceMapperUnit {
 
-  private static final Set<Class<?>> SUPPORTED_PARENTS = Collections.singleton(ResourceDto.class);
+  private static final Set<Class<?>> SUPPORTED_PARENTS = Set.of(
+    ResourceRequestDto.class,
+    ResourceResponseDto.class
+  );
 
   @Override
   public Set<Class<?>> supportedParents() {
